--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@
 }
 
 
-.b2{
+.posterhead{
   text-align: left;
   text-decoration: none;
   list-style-type: none;
@@ -165,7 +165,7 @@
   padding-left: 70px;
   
 }
-.b3{
+.poster-sub{
   font-family: 'Work Sans';
   ont-style: normal;
   font-weight: 700;
