--- a/style.css
+++ b/style.css
@@ -138,12 +138,12 @@
 /*End My Plans*/
 
 /*poster start*/
-.b1{
-  background-image: linear-gradient(to bottom, rgba(22, 43, 161, 0.52), rgba(117, 19, 93, 0.73)),url('images/watch.png') ;
-  
+.posterhead{
+
+  background-image: linear-gradient(to right, rgba(253, 97, 6, 0.8), rgba(245, 239, 239, 0.486)),url('images/watch.png') ;
   background-size: cover;
   background-position: center;
-  height: 300px;
+  height: 300px;       
   width: 1140px;
   left: 230px;
   top: 2216px;
@@ -151,16 +151,15 @@
   min-height: auto;
   align-items: center;
   justify-content: center;
-  
   border-radius: 8px;
 }
 
 
-.posterhead{
+.postertitle{
   text-align: left;
   text-decoration: none;
   list-style-type: none;
-  padding-top: 65px;
+  padding-top: 50px;
   margin-top: 60px;
   padding-left: 70px;
   
