--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@
   
 }
 
-/*End My Plans*/
+/*My Plans End*/
 
 /*poster start*/
 .posterhead{
@@ -273,3 +273,8 @@ footer{
 
 
 /*Footer End*/
+
+
+
+/* Programming HERO */ 
+/*First Project*/
